AP-2115 Fix global window padding style cause overlaps

--- a/Apromore-Core-Components/Apromore-Portal/src/main/webapp/themes/ap/csv-importer/css/index.css
+++ b/Apromore-Core-Components/Apromore-Portal/src/main/webapp/themes/ap/csv-importer/css/index.css
@@ -197,38 +197,38 @@
 }
 
 /* Fixes for CSV importer list */
-.myGroupBox .z-window-content {
+.ap-csv-importer .myGroupBox .z-window-content {
     padding: 0 !important;
 }
 
-.myGroupBox .z-label {
+.ap-csv-importer .myGroupBox .z-label {
     font-size: 14px !important;
     line-height: 16px !important;
 }
 
 /* Old CSS */
 
-.greenLabel {
+.ap-csv-importer .greenLabel {
     padding-left: 1px;
     color: green;
     font-size: 12px;
     margin-left: 0px;
 }
 
-.redLabel {
+.ap-csv-importer .redLabel {
     padding-left: 1px;
     color: red;
     font-size: 12px;
     margin-left: 0px;
 }
 
-.z-row-content, .z-group-content, .z-groupfoot-content, .z-footer-content {
+.ap-csv-importer .z-row-content, .z-group-content, .z-groupfoot-content, .z-footer-content {
 
     overflow: hidden;
     width: max-content;
 }
 
-.myGroupBox {
+.ap-csv-importer .myGroupBox {
     display: block;
     height: inherit;
     border: 0px solid #cfcfcf;
@@ -237,61 +237,51 @@
     overflow: auto;
     zoom: 1;
 }
-.relativePos{
+
+.ap-csv-importer .relativePos{
     position:relative;
     width: 100%;
     padding-top:60px;
 }
 
-.banner{
-    position: absolute;
-    width: 100%;
-    height: 52px;
-    background-image: url("/img/apromore_banner.png");
-    background-repeat: round;
-    padding-top: 75px;
-    z-index: -100;
-}
-
-tr.z-row td.z-row-inner, tr.z-row .z-cell {
+.ap-csv-importer tr.z-row td.z-row-inner, tr.z-row .z-cell {
     padding-left: 10px;
 }
 
-.z-window-content {
+.ap-csv-importer .z-window-content {
     border: 1px solid #cfcfcf;
     margin: 0;
-    padding: 0px 0px 0px 4px;
+    padding: 0;
     overflow: hidden;
     zoom: 1;
 }
 
-.z-paging {
+.ap-csv-importer .z-paging {
     position: absolute;
     bottom: 2px;
     width: 98%;
 }
 
-.z-paging-info {
+.ap-csv-importer .z-paging-info {
     position: absolute;
     right: 10px;
     top: 0px;
 }
 
-.z-window-content {
+.ap-csv-importer .z-window-content {
     border: unset;
 }
 
 
-.z-grid-body {
+.ap-csv-importer .z-grid-body {
     overflow-x: hidden !important;
 }
 
-
-.z-grid-header table th {
+.ap-csv-importer .z-grid-header table th {
     text-align: -webkit-center;
 }
 
-.z-select {
+.ap-csv-importer .z-select {
     font-size: 14px;
     background: transparent;
     filter: invert(1);
